# gmlite

./: BUILD_UNIX.txt  BUILD_WINDOWS.txt  CMakeLists.txt  README.md  config.h.in
gmlite/: CMakeLists.txt  common.c  cpuid.c  gmlite_init.c  mem.c  mem_sec.c
gmlite/bn/: bn_add.c  bn_asm.c  bn_ctx.c  bn_div.c  bn_gcd.c  bn_intern.c  bn_lcl.h  bn_lib.c  bn_mod.c  bn_mont.c  bn_mul.c  bn_print.c  bn_rand.c  bn_shift.c  bn_sm2p256.c  bn_sqr.c  bn_word.c
gmlite/bn/asm/: alpha-mont.pl  armv4-gf2m.pl  armv4-mont.pl  armv8-mont.pl  bn-586.pl  c64xplus-gf2m.pl  co-586.pl  ia64-mont.pl  mips-mont.pl  mips.pl  parisc-mont.pl  ppc-mont.pl  ppc.pl  ppc64-mont.pl  rsaz-avx2.pl  rsaz-x86_64.pl  s390x-gf2m.pl  s390x-mont.pl  sparct4-mont.pl  sparcv9-mont.pl  sparcv9a-mont.pl  via-mont.pl  vis3-mont.pl  x86-gf2m.pl  x86-mont.pl  x86.pl  x86_64-gcc.c  x86_64-gf2m.pl  x86_64-mont.pl  x86_64-mont5.pl
gmlite/ec/: ec_curve.c  ec_kdf.c  ec_lcl.h  ec_lib.c  ec_mult.c  ecp_mont.c  ecp_sm2p256.c  ecp_sm2z256.c  ecp_smpl.c
gmlite/ec/asm/: ecp_sm2z256-x86_64.pl
gmlite/include/internal/: bn_int.h
gmlite/pairing/: G1.c  G2.c  final_expo.c  fp.c  fp12.c  fp2.c  fp6.c  optate.c  pairing.c  pairing_lcl.h
gmlite/pairing/asm/: fp256-x86_64.pl
gmlite/perlasm/: ppc-xlate.pl
gmlite/rand/: prng.c  rand.c  rand_lcl.h  sys_rand.c
gmlite/sm2/: sm2.c  sm2_enc.c  sm2_kmeth.c  sm2_lcl.h  sm2_sign.c
gmlite/sm3/: sm3.c  sm3_c.c  sm3_lcl.h
gmlite/sm3/asm/: sm3-x86_64.pl
gmlite/sm4/: sm4.c
gmlite/sm9/: sm9.c  sm9_kmeth.c  sm9_lcl.h  sm9_lib.c  sm9_sign.c
include/gmlite/: bn.h  common.h  cpuid.h  crypto.h  ec.h  gm_typ.h  pairing.h  rand.h  sm2.h  sm3.h  sm4.h  sm9.h
speed/: CMakeLists.txt  pairing_speed.c  speed.c  speed.h  speed_lcl.h
test/: CMakeLists.txt  modinv_test.c  padding_test.c  pairing_test.c  secure_mem_test.c  simple_thread.c  simple_thread.h  sm2_test.c  sm3_test.c  sm4_test.c  sm9_test.c  test.c  test.h
